--- a/server-bedrock/base/storage.yaml
+++ b/server-bedrock/base/storage.yaml
@@ -7,10 +7,10 @@ metadata:
     app.kubernetes.io/name: minecraft-server
 spec:
   capacity:
-    storage: 1Gi
+    storage: 2Gi
   accessModes:
     - ReadWriteOnce
-  storageClassName: longhorn-minecraft
+  storageClassName: minecraft-storage-class
   csi:
     driver: driver.longhorn.io
     fsType: ext4
@@ -27,6 +27,6 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
+      storage: 2Gi
   volumeName: minecraft-server
-  storageClassName: longhorn-minecraft
+  storageClassName: minecraft-storage-class
