--- a/server-bedrock/overlays/mc1/kustomization.yaml
+++ b/server-bedrock/overlays/mc1/kustomization.yaml
@@ -12,8 +12,10 @@ resources:
 configMapGenerator:
   - name: minecraft-server-config-mc1
     behavior: create
+    options:
+      disableNameSuffixHash: true
     literals:
-      - SERVER_NAME='My World 1'
+      - SERVER_NAME='Deddy'
       - SERVER_PORT='19132'
       - SERVER_PORT_V6='19133'
       - GAMEMODE='creative'
@@ -60,12 +62,6 @@ patches:
       - op: replace
         path: /spec/template/spec/containers/0/envFrom/0/configMapRef/name
         value: minecraft-server-config-mc1
-      - op: replace
-        path: /spec/template/spec/containers/0/ports/0/containerPort
-        value: 19132
-      - op: replace
-        path: /spec/template/spec/containers/0/ports/1/containerPort
-        value: 19132
 
   - target:
       version: v1
